﻿
BrawlCrate - v0.26b Hotfix 1
Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.26b Hotfix 1 - (9/16/2019)
 . Fix bug in which animations for models with non-sequential bonesets wouldn't export as anim properly
 
 - BrawlCrate v0.26b - (9/13/2019)
 . Rewrite anim exporter. Maya now correctly reads BrawlCrate-exported anim files
 . Fix bug in which attempting to sort MDL0 textures sorted objects instead
 
 - BrawlCrate v0.26 Hotfix 3 - (7/25/2019)
 . Improve interpolation function to match v0.71 in all aspects
 . Fix anim importer to properly parse weighting
 . Fix anim exporter to properly export tangents
 . Fix issue where module annotation buttons were missing
 
 - BrawlCrate v0.26 Hotfix 2 - (7/8/2019)
 . Fix issue in which Shaders could be initialized with null names
 . Fix crashes caused by VIS0 syncing
 . Fix crashes when moving vertices
 . Fix issue where an exported DAE could not be reimported
 . Fix bug in which vertex edits could not be saved
 . Fix bug in which Final Smash flags for Fighter Configs switched the None/Single flag
 . Fix bug in which generating metal materials for a model that doesn't currently have them would result in the metal texture being set to "<null>"
 . Fix bug in which exporting a model with "<null>" textures would crash the program
